# marl-football

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  test.py
debug/: dqn_debug_v1.py
envs/: abstract_football_env.py  abstract_football_env_v0.py  abstract_football_env_v1.py
evaluate/: dqn_evaluate_v1.py
models/: dqn_v1.py
render/: viewer.py
results/baseline/: baseline_goals.csv  baseline_rewards.csv
results/high_epsilon_decay/: high_epsilon_decay_epsilon.csv  high_epsilon_decay_goals_dist.csv  high_epsilon_decay_rewards.csv
results/high_gamma/: high_gamma_goals.csv  high_gamma_rewards.csv
results/high_learning_rate/: high_learning_rate_epsilon.csv  high_learning_rate_goals.csv  high_learning_rate_rewards.csv
results/low_epsilon_decay/: low_epsilon_decay_epsilon.csv  low_epsilon_decay_goals.csv  low_epsilon_decay_rewards.csv
results/low_gamma/: low_gamma_goals.csv  low_gamma_rewards.csv
results/low_learning_rate/: low_learning_rate_goal.csv  low_learning_rate_rewards.csv
src/: debug.py  dqn.py  football_env.py  main.py  train.py  viewer.py
train/: dqn_train_v1.py  dqn_train_v2.py
