[project]
name = "marl-football"
version = "0.1.0"
description = "Testing Multi Agent Reinforcement Learning in football simulation using DQN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "torch>=2.8.0",
]
